[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccburn"
version = "0.1.1"
description = "Explain why your Claude Code sessions are expensive."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Yash Arora" }]
keywords = ["claude", "claude-code", "cost", "analytics", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
include = ["ccburn*"]

[project.scripts]
ccburn = "ccburn.cli:main"

[project.urls]
Homepage = "https://github.com/yasharora/ccburn"
Issues = "https://github.com/yasharora/ccburn/issues"
